# hayaland

./: .dockerignore  .env.example  .gitignore  3partydeal-gap-analysis.md  3partydeal.txt  AGENTS.md  Cargo.toml  LICENSE  README.md  admin-dontrol.md  agreement-generation-and-signing.md  catalog.md  db.txt  deal-plan.md  deal-timeout.md  dispute.md  docker-compose.yml  hayaland-deal-plan.md  message.md  milestone-platform-wallet.md  milestones-execution-tracking.md  missing-implementations.md  negotiation-guide.md  notifications.md  party-guide.md  party_verifications.md  review.md  transaction-approval-workflow.md  trust-score.md  wallets.md
crates/api/: Cargo.toml
crates/api/src/: dto.rs  errors.rs  lib.rs  main.rs
crates/api/src/dto/: catalog.rs
crates/api/src/handlers/: assign_user_roles.rs  create_user.rs  deactivate_user.rs  forgot_password.rs  get_user.rs  list_users.rs  login.rs  milestones.rs  mod.rs  resend_verification.rs  reset_password.rs  roles.rs  update_user.rs  verify_email.rs
crates/api/src/middleware/: auth.rs
crates/api/src/routes/: admin.rs  catalog.rs  chatrooms.rs  deals.rs  disputes.rs  messages.rs  mod.rs  notifications.rs  parties.rs  payments.rs  reviews.rs  users.rs  verifications.rs
crates/api/src/websocket/: message_socket.rs  mod.rs
crates/api/tests/: catalog.rs  chatrooms.rs  create_user.rs  deal_timeout.rs  disputes.rs  messages.rs  notifications.rs  reviews.rs  trust_scores.rs  verifications.rs
crates/api/tests/common/: mod.rs
crates/application/: Cargo.toml
crates/application/src/: errors.rs  lib.rs  ports.rs  test_helpers.rs
crates/application/src/agreements/: admin_update_agreement.rs  dto.rs  generate_agreement.rs  get_agreement.rs  mod.rs  sign_agreement.rs  tests.rs
crates/application/src/catalog/: access.rs  admin_update_catalog_flags.rs  bind_catalog_item_to_deal.rs  contact_catalog_owner.rs  create_enhancement.rs  create_need.rs  create_resource.rs  delete_enhancement.rs  delete_need.rs  delete_resource.rs  dto.rs  get_enhancement.rs  get_need.rs  get_resource.rs  list_deal_catalog_items.rs  list_enhancements.rs  list_needs.rs  list_resources.rs  mappers.rs  mod.rs  tests.rs  update_enhancement.rs  update_need.rs  update_party_catalog_settings.rs  update_resource.rs
crates/application/src/chatrooms/: access.rs  create_chat_room.rs  dto.rs  get_chat_room.rs  join_chat_room.rs  leave_chat_room.rs  list_chat_rooms.rs  manage_chat_room_membership.rs  mod.rs  soft_delete_chat_room.rs  tests.rs  update_chat_room.rs
crates/application/src/deals/: create_deal.rs  dto.rs  execute_transition.rs  get_deal.rs  list_deals.rs  mod.rs  process_timeouts.rs  submit_deal.rs  terms.rs  tests.rs  timeout_config.rs  update_deal.rs  validate_deal.rs  value_distribution.rs
crates/application/src/disputes/: dto.rs  escalate_dispute.rs  get_dispute.rs  list_admin_disputes.rs  list_deal_disputes.rs  mod.rs  raise_dispute.rs  reject_dispute.rs  resolve_dispute.rs  respond_to_dispute.rs  submit_evidence.rs  tests.rs
crates/application/src/email/: dto.rs  mod.rs  queue.rs  resend_verification.rs  verify_email.rs
crates/application/src/messages/: access.rs  admin_broadcast.rs  dto.rs  edit_message.rs  get_message.rs  get_unread_count.rs  list_conversations.rs  list_messages.rs  mark_read.rs  mod.rs  pin_message.rs  send_message.rs  soft_delete_message.rs  tests.rs  toggle_reaction.rs  unpin_message.rs
crates/application/src/milestones/: access.rs  complete_milestone.rs  create_milestone.rs  delete_milestone.rs  dto.rs  get_deal_progress.rs  list_milestones.rs  mod.rs  start_milestone.rs  tests.rs  update_milestone.rs  verify_milestone.rs
crates/application/src/notifications/: admin_send.rs  admin_templates.rs  delete_notification.rs  dto.rs  get_notification.rs  get_preferences.rs  get_unread_count.rs  list_notifications.rs  mark_all_read.rs  mark_read.rs  mod.rs  render.rs  route.rs  send_notification.rs  update_preferences.rs
crates/application/src/parties/: add_role.rs  create_party.rs  delete_party.rs  dto.rs  get_party.rs  list_my_parties.rs  list_roles.rs  mod.rs  remove_role.rs  search_parties.rs  update_party.rs
crates/application/src/password_reset/: dto.rs  mod.rs  request_password_reset.rs  reset_password.rs
crates/application/src/payments/: approve_transaction.rs  create_wallet.rs  deduct_fee.rs  deposit_points.rs  dto.rs  get_deal_wallet.rs  get_transaction.rs  get_wallet.rs  hold_escrow.rs  list_deal_transactions.rs  list_pending_approvals.rs  list_wallet_transactions.rs  mod.rs  record_adjustment.rs  release_escrow.rs  tests.rs  withdraw_points.rs
crates/application/src/reviews/: dto.rs  get_deal_review_status.rs  get_review.rs  hide_review.rs  list_admin_reviews.rs  list_deal_reviews.rs  list_party_reviews.rs  mod.rs  submit_review.rs  tests.rs
crates/application/src/roles/: assign_user_roles.rs  dto.rs  list_roles.rs  mod.rs  update_role_scopes.rs
crates/application/src/trust_scores/: dto.rs  get_trust_score.rs  mod.rs  profile_completeness.rs  recalculate_all.rs  recalculate_trust_score.rs
crates/application/tests/: parties.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config.rs  database.rs  lib.rs  migrations.rs  telemetry.rs
crates/infrastructure/tests/: config.rs  email_worker.rs  postgres_agreement_repository.rs  postgres_catalog_repository.rs  postgres_deal_repository.rs  postgres_dispute_repository.rs  postgres_email_verification_repository.rs  postgres_notification_preference_repository.rs  postgres_notification_repository.rs  postgres_notification_template_repository.rs  postgres_party_repository.rs  postgres_party_verification_repository.rs  postgres_password_reset_repository.rs  postgres_review_repository.rs  postgres_role_repository.rs  postgres_user_repository.rs  postgres_wallet_repository.rs  security.rs  telemetry.rs
(+539 files in other folders)
