[workspace]
members = ["crates/domain", "crates/application", "crates/infrastructure", "crates/api"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hayaland Team"]
license = "MIT"
rust-version = "1.96"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v7", "serde"] }
time = { version = "=0.3.47", features = ["serde", "formatting", "parsing"] }
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
validator = { version = "0.19", features = ["derive"] }
dotenvy = "0.15"

# Internal crates
domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }

# Infrastructure
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "uuid", "time", "migrate"] }
config = "0.15"
secrecy = { version = "0.10", features = ["serde"] }

argon2 = "0.5"
password-hash = "0.5"
rand = { version = "0.8", features = ["getrandom"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# API
actix-web = "4.10"
actix-rt = "2.10"
tracing-actix-web = "0.7"
jsonwebtoken = "9"

[profile.release]
strip = true
lto = true
