[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
application = { workspace = true }
infrastructure = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
time.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
validator.workspace = true
actix-web.workspace = true
actix-rt.workspace = true
actix-web-actors.workspace = true
actix = "0.13"
tracing-actix-web.workspace = true
sqlx.workspace = true
config.workspace = true
secrecy.workspace = true
dotenvy.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
actix-web.workspace = true
actix-rt.workspace = true
actix-http = "3"
serde_json.workspace = true
async-trait.workspace = true
domain = { workspace = true }
application = { workspace = true }
tracing-subscriber.workspace = true
rust_decimal.workspace = true
