[package]
name = "application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
domain = { workspace = true }
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
async-trait.workspace = true
tracing.workspace = true
rand.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
