[package]
name = "domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
async-trait.workspace = true
validator.workspace = true

[dev-dependencies]
serde_json.workspace = true
