[package]
name = "domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
async-trait.workspace = true
validator.workspace = true
rust_decimal.workspace = true
sha2.workspace = true
base64.workspace = true

[dev-dependencies]
serde_json.workspace = true
